--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/start.js"
+    "start": "webpack -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.2",
     "gsap": "^1.19.1",
     "jquery": "^3.2.1",
     "normalize-css": "^2.3.1"
